mir/src/snapshots/transmute_mir__tests__function_non_mut_param.snap
---
source: mir/src/lib.rs
expression: mir
---
Ok(
    Mir {
        functions: [
            FunctionId(0) => Function {
                identifier: Identifier {
                    id: IdentId(1),
                    span: 1:5; [4, 5],
                },
                symbol_id: SymbolId(19),
                parameters: [
                    Parameter {
                        identifier: Identifier {
                            id: IdentId(2),
                            span: 1:7; [6, 7],
                        },
                        symbol_id: SymbolId(20),
                        type_id: TypeId(4),
                        mutable: false,
                    },
                ],
                variables: {},
                body: Some(
                    ExprId(0),
                ),
                ret: TypeId(1),
                parent: Namespace(
                    NamespaceId(0),
                ),
            },
        ],
        structs: [],
        identifiers: [
            IdentId(0) => "<root>",
            IdentId(1) => "f",
            IdentId(2) => "a",
            IdentId(3) => "number",
            IdentId(4) => "core",
            IdentId(5) => "add",
            IdentId(6) => "boolean",
            IdentId(7) => "div",
            IdentId(8) => "eq",
            IdentId(9) => "ge",
            IdentId(10) => "gt",
            IdentId(11) => "le",
            IdentId(12) => "lt",
            IdentId(13) => "mul",
            IdentId(14) => "neg",
            IdentId(15) => "neq",
            IdentId(16) => "sub",
            IdentId(17) => "void",
        ],
        expressions: [
            ExprId(0) => Expression {
                id: ExprId(0),
                kind: Block(
                    [
                        StmtId(3),
                    ],
                ),
                span: 1:18; [17, 19],
                type_id: TypeId(2),
            },
        ],
        statements: [
            StmtId(3) => Statement {
                id: StmtId(3),
                kind: Ret(
                    None,
                ),
                span: 1:18; [17, 19],
            },
        ],
        namespaces: [
            NamespaceId(0) => (
                None,
                IdentId(0),
            ),
            NamespaceId(1) => (
                Some(
                    NamespaceId(0),
                ),
                IdentId(4),
            ),
        ],
        symbols: [
            SymbolId(3) => Symbol {
                id: SymbolId(3),
                kind: NativeType(
                    IdentId(17),
                    Void,
                ),
                type_id: TypeId(2),
                ident_id: IdentId(17),
            },
            SymbolId(4) => Symbol {
                id: SymbolId(4),
                kind: NativeType(
                    IdentId(3),
                    Number,
                ),
                type_id: TypeId(2),
                ident_id: IdentId(3),
            },
            SymbolId(5) => Symbol {
                id: SymbolId(5),
                kind: NativeType(
                    IdentId(6),
                    Boolean,
                ),
                type_id: TypeId(2),
                ident_id: IdentId(6),
            },
            SymbolId(6) => Symbol {
                id: SymbolId(6),
                kind: Native(
                    IdentId(16),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(4),
                    SubNumberNumber,
                ),
                type_id: TypeId(5),
                ident_id: IdentId(16),
            },
            SymbolId(7) => Symbol {
                id: SymbolId(7),
                kind: Native(
                    IdentId(15),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    NeqNumberNumber,
                ),
                type_id: TypeId(6),
                ident_id: IdentId(15),
            },
            SymbolId(8) => Symbol {
                id: SymbolId(8),
                kind: Native(
                    IdentId(15),
                    [
                        TypeId(3),
                        TypeId(3),
                    ],
                    TypeId(3),
                    NeqBooleanBoolean,
                ),
                type_id: TypeId(7),
                ident_id: IdentId(15),
            },
            SymbolId(9) => Symbol {
                id: SymbolId(9),
                kind: Native(
                    IdentId(14),
                    [
                        TypeId(4),
                    ],
                    TypeId(4),
                    NegNumber,
                ),
                type_id: TypeId(8),
                ident_id: IdentId(14),
            },
            SymbolId(10) => Symbol {
                id: SymbolId(10),
                kind: Native(
                    IdentId(13),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(4),
                    MulNumberNumber,
                ),
                type_id: TypeId(5),
                ident_id: IdentId(13),
            },
            SymbolId(11) => Symbol {
                id: SymbolId(11),
                kind: Native(
                    IdentId(12),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    LtNumberNumber,
                ),
                type_id: TypeId(6),
                ident_id: IdentId(12),
            },
            SymbolId(12) => Symbol {
                id: SymbolId(12),
                kind: Native(
                    IdentId(11),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    LeNumberNumber,
                ),
                type_id: TypeId(6),
                ident_id: IdentId(11),
            },
            SymbolId(13) => Symbol {
                id: SymbolId(13),
                kind: Native(
                    IdentId(10),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    GtNumberNumber,
                ),
                type_id: TypeId(6),
                ident_id: IdentId(10),
            },
            SymbolId(14) => Symbol {
                id: SymbolId(14),
                kind: Native(
                    IdentId(9),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    GeNumberNumber,
                ),
                type_id: TypeId(6),
                ident_id: IdentId(9),
            },
            SymbolId(15) => Symbol {
                id: SymbolId(15),
                kind: Native(
                    IdentId(8),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    EqNumberNumber,
                ),
                type_id: TypeId(6),
                ident_id: IdentId(8),
            },
            SymbolId(16) => Symbol {
                id: SymbolId(16),
                kind: Native(
                    IdentId(8),
                    [
                        TypeId(3),
                        TypeId(3),
                    ],
                    TypeId(3),
                    EqBooleanBoolean,
                ),
                type_id: TypeId(7),
                ident_id: IdentId(8),
            },
            SymbolId(17) => Symbol {
                id: SymbolId(17),
                kind: Native(
                    IdentId(7),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(4),
                    DivNumberNumber,
                ),
                type_id: TypeId(5),
                ident_id: IdentId(7),
            },
            SymbolId(18) => Symbol {
                id: SymbolId(18),
                kind: Native(
                    IdentId(5),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(4),
                    AddNumberNumber,
                ),
                type_id: TypeId(5),
                ident_id: IdentId(5),
            },
            SymbolId(19) => Symbol {
                id: SymbolId(19),
                kind: LetFn(
                    FunctionId(0),
                    [
                        TypeId(4),
                    ],
                    TypeId(1),
                ),
                type_id: TypeId(9),
                ident_id: IdentId(1),
            },
            SymbolId(20) => Symbol {
                id: SymbolId(20),
                kind: Parameter(
                    0,
                ),
                type_id: TypeId(4),
                ident_id: IdentId(2),
            },
        ],
        types: [
            TypeId(1) => Void,
            TypeId(2) => None,
            TypeId(3) => Boolean,
            TypeId(4) => Number,
            TypeId(5) => Function(
                [
                    TypeId(4),
                    TypeId(4),
                ],
                TypeId(4),
            ),
            TypeId(6) => Function(
                [
                    TypeId(4),
                    TypeId(4),
                ],
                TypeId(3),
            ),
            TypeId(7) => Function(
                [
                    TypeId(3),
                    TypeId(3),
                ],
                TypeId(3),
            ),
            TypeId(8) => Function(
                [
                    TypeId(4),
                ],
                TypeId(4),
            ),
            TypeId(9) => Function(
                [
                    TypeId(4),
                ],
                TypeId(1),
            ),
        ],
    },
)
